Some improve in code